--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity android:name=".activities.ActivityA">
+
+        </activity>
+        <activity android:name=".activities.ActivityB">
+
+        </activity>
+
+        <activity android:name=".activities.ActivitySharedA">
+
+        </activity>
+
+        <activity android:name=".activities.ActivitySharedB">
+
+        </activity>
+
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
